kubernetes/mongo.yml
apiVersion: v1
kind: Pod
metadata:
  name: blogs-app
spec:
  containers:
  - name: client
    image: rkvishnu77/blogs-client:latest
    ports:
    - containerPort: 3000
  - name: server
    image: rkvishnu77/blogs-server:latest
    ports:
    - containerPort: 8000
  - name: mongodb
    image: mongo:latest
    ports:
    - containerPort: 27017
