kubernetes/server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  type: ClusterIP
  selector:
    component: client
  ports:
    - port: 8000
      targetPort: 8000
